--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,4 +45,16 @@
     cursor: pointer;
     background: #5a5a5a;
   }
+  .settings-container{
+    padding:50px;
+  }
+  .reset-btn{
+    border: 2px solid black;
+    border-radius: 3px;
+    width:120px;
+    height:50px;
+    text-align: center;
+    font-size:20px;
+    background-color: rgba(2, 250, 250, 0.514);
+  }
 
