--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,20 +41,45 @@
     border: 3px solid black;
     transition: background 0.2s ease-in-out;
   }
-  .field:hover {
-    cursor: pointer;
-    background: #5a5a5a;
+  #block_0,
+  #block_1,
+  #block_2 {
+    border-top:none;
   }
-  .settings-container{
-    padding:50px;
+  #block_0,
+  #block_3,
+  #block_6 {
+    border-left:none;
   }
-  .reset-btn{
-    border: 2px solid black;
-    border-radius: 3px;
-    width:120px;
-    height:50px;
-    text-align: center;
-    font-size:20px;
-    background-color: rgba(2, 250, 250, 0.514);
+  #block_6,
+  #block_7,
+  #block_8 {
+    border-bottom:none;
   }
+  #block_2,
+  #block_5,
+  #block_8 {
+    border-right:none;
+  }
+
+.field:hover {
+  cursor: pointer;
+  background: #5a5a5a;
+}
+.settings-container{
+  padding:50px;
+}
+.reset-btn{
+  border: 2px solid black;
+  border-radius: 3px;
+  width:120px;
+  height:50px;
+  text-align: center;
+  font-size:20px;
+  background-color: rgba(2, 250, 250, 0.514);
+  transition: background 0.2s ease-in-out;
+}
+.reset-btn:hover{
+  background-color: rgba(2, 250, 250, 1);
+}
 
