change cursor on reset button

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,6 +80,7 @@
   transition: background 0.2s ease-in-out;
 }
 .reset-btn:hover{
+  cursor:pointer;
   background-color: rgba(2, 250, 250, 1);
 }
 
